--- a/atv.html
+++ b/atv.html
@@ -2,14 +2,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>atividadde ponto</title>
+    <title>atividade ponto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   </head>
     <!-- Barra de navbar inicio-->
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+   <nav class="navbar navbar-expand-lg" style="background-color: blueviolet;">
         <div class="container-fluid">
-         <h1> <a class="navbar-brand" href="atv.css">Proz</a></h1>
+         <h1> <a class="navbar-brand">Proz</a></h1>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -18,7 +18,7 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="https://prozeducacao.com.br/quem-somos/">Quem somos?</a>
               </li>
-              <li class="nav-item dropdown">
+              <li class="nav-item dropdown" >
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Cursos
                 </a>
@@ -60,11 +60,14 @@
             </ul>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Pesquisar</button>
+              <button class="btn btn-outline-dark" type="submit">Pesquisar</button>
             </form>
           </div>
         </div>
       </nav>
+    <!--fim navbar-->
+
+    <!--imagens slide-->
       <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -86,37 +89,63 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+      <!--fim das imagens-->
 
-      <div class="container text-center">
-        <div class="row align-items-start">
+      <!--inicio das colunas-->
+  <div class="text-bg" style="background-color: blueviolet;">
+
+      <div class="container text-center " style=" padding: 15 ;width: 100%; background-color: blueviolet;">
+        <div class="row align-items-start"> 
           <div class="col-lg-4 col-md-6">
-            <h3 class="text-bg-secondary">Conexão do estudante com o trabalho</h3>
+            <h3 class="text-bg-light-expand-lg" style="background-color: blueviolet;">Conexão do estudante com o trabalho</h3>
             <p>Mais de 80% dos nossos alunos se empregam na área em até um ano após a conclusão do seu curso.</p>
           </div>
-          <div class="col-lg-4 col-md-6">
-            <h3 class="text-bg-secondary">Qualidade do curso</h3>
+          <div class="col-lg-4 col-md-6" >
+            <h3 class="text-bg-light-expand-lg" style="background-color: blueviolet;">Qualidade do cursos</h3>
         <p>Cursos atualizados com foco no que o mercado mais valoriza. Experimentando sua profissão e resolvendo problemas concretos na prática.</p>
           </div>
           <div class="col-lg-4 col-md-6">
-            <h3 class="text-bg-secondary">Reconhecidos pelo MEC</h3>
+            <h3 class="text-bg-light-expand-lg" style="background-color: blueviolet;">Reconhecidos pelo MEC</h3>
         <p>Todos os nossos cursos são reconhecidos pelo MEC. Todas as unidades Proz aprovadas pelas Secretarias Estatuais de Educação.</p>
           </div>
           <br><br>
           <div class="col-lg-4 col-md-6">
-          <h3 class="text-bg-secondary">Perto de você</h3>
+          <h3 class="text-bg-light-expand-lg" style="background-color: blueviolet;">Perto de você</h3>
           <p>Bem localizadas e de fácil acesso. Tem sempre uma unidade perto de você.</p>
             </div>
             <div class="col-lg-4 col-md-6">
-            <h3 class="text-bg-secondary">Cabe no bolso</h3>
+            <h3 class="text-bg-light-expand-lg" style="background-color: blueviolet;">Cabe no bolso</h3>
             <p>Mensalidades que cabem no seu orçamento do começo ao fim do curso.</p>
               </div>
               <div class="col-lg-4 col-md-6">
-                <img src= "https://lh3.googleusercontent.com/B2Q2tyNFPRA2XIS_Jm4POGkL1BhRIo9iOKVnuUCkZ66_kBoCgcJmpeozUR2VIaeSEWSkLIay3oN3B4-CiJC1KoHqb9wgd_1Y-ra2saI">
+                <h3 class="text-bg-light-expand-lg" style="background-color: blueviolet;">Sempre aqui por você</h3>
+            <p>Temos disponibilidade de acesso, qualquer problema ou duvida e estaremos aqui.</p>
               </div>
+    </div> 
+              <!--fim das colunas-->
               
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
       
+      <!--numero de pagina-->
+      <nav aria-label="Page navigation" style="background-color:blueviolet; padding-left: 450px;">
+        <ul class="pagination">
+          <li class="page-item" style="color: blueviolet;">
+            <a class="page-link" href="#" aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span>
+            </a>
+          </li>
+          <li class="page-item"><a class="page-link" href="#">1</a></li>
+          <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <li class="page-item">
+            <a class="page-link" href="#" aria-label="Next">
+              <span aria-hidden="true">&raquo;</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <!--fim de numero de pagina-->
   </body>
 </html>
   
