--- a/bootstrap formulario 1.html
+++ b/bootstrap formulario 1.html
@@ -1,79 +1,100 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Cadasto de Professor</title>
+  <title>Formulario</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
+
 <body>
-
-<div class="container mt-3">
-  <h2>Cadastro de Professor</h2>
-  <form action="/action_page.php" class="was-validated">
-    <div class="mb-3 mt-3">
-      <label for="Matrícula" class="form-label">Matrícula:</label>
-      <input type="text" class="form-control" id="Matrícula" placeholder="Enter Matrícula" name="Matrícula" required>
-      <div class="valid-feedback">Valido.</div>
-      <div class="invalid-feedback">Por favor insira a Matrícula.</div>
-    </div>
-    <form action="/action_page.php" class="was-validated">
-      <div class="mb-3 mt-3">
-        <label for="Nome Prof" class="form-label">Nome Prof:</label>
-        <input type="text" class="form-control" id="Nome Prof" placeholder="Enter Nome Prof" name="Nome Prof" required>
-        <div class="valid-feedback">Valido.</div>
-        <div class="invalid-feedback">Por favor insira o Nome Prof.</div>
+<div class="container mt-0">
+  <h6>Cadastro de clientes                    (*)campos obrigatórios</h6>
+   <form onsubmit="return VerificarNomePreenchido();">
+     <div class="mb-0 mt-0">
+         <label for="Nome" class="form-label">Nome(*):</label>
+          <input type="text" class="form-control" id="Nome" placeholder="Entre com o nome" name="Nome" required>
       </div>
-    <div class="mb-3 mt-3">
-      <label for="sel1" class="form label">Curprof:</label>
-      <select class="form-select" id="sel1" name="sellist1">
-        <option>Tec.Enfermagem</option>
-        <option>Tec.Desenvolv.Sistemas</option>
-        <option>Administração</option>
-        <option>Nenhuma</option>
-      </select>
-      <br>
-    </div>
-    <div class="mb-3">
-      <label for="sel2" class="form-label">Diciplina:</label>
-    <select multiple class="form-select" id="sel2" name="sellist2">
-      <option>Banco de Dados</option>
-      <option>Programação</option>
-      <option>Matemática</option>
-      <option>Enfermagem</option>
-      <option>Inglês</option>
-      <option>Artes</option>
-      <option>Ed.Financeira</option>
-    </select>
-    <br>
-    </div>
-    <label for="sel2" class="form-label">Turno:</label>
-    <div class="form-check">
-      <input type="radio" class="form-check-input" id="radio1" name="optradio" value="Manhã" checked>
-      <label class="form-check-label" for="radio1">Manhã</label>
-    </div>
-    <div class="form-check">
-      <input type="radio" class="form-check-input" id="radio2" name="optradio" value="Tarde">
-      <label class="form-check-label" for="radio2">Tarde</label>
-    </div>
-    <div class="form-check">
-      <input type="radio" class="form-check-input" id="radio3" name="optradio" value="Noite"
-      <label class="form-check-label">Noite</label>
-    </div>
-    <br>
-    <label for="sel2" class="form-label">Sexo:</label>
-    <div class="form-check">
-      <input type="radio" class="form-check-input" id="radio1" name="optradio" value="Feminino" checked>Feminino
-      <label class="form-check-label" for="radio1"></label>
-    </div>
-    <div class="form-check">
-      <input type="radio" class="form-check-input" id="radio2" name="optradio" value="Masculino">Masculino
-      <label class="form-check-label" for="radio2"></label>
-    </div>
-    <br>
-    <button type="Cadastrar" class="btn btn-primary">Cadastrar</button>
-  </form>
-</div>
+       <div class="mb-0">
+            <label for="cpf" class="form-label">CPF(*):</label>
+            <input type="text" class="form-control" id="CPF" placeholder="Apenas números (11 dígitos)" name="cpf" required>
+        </div>
+    
+        <div class="row">
+          <div class="col">
+              <label for="lou" class="form-label">Logradouro(*):</label>
+              <input type="text" class="form-control" id="Logradouro" placeholder="Entre com Rua, Av, Praça, etc..." name="lou" required>
+          </div>
+           <div class="col">
+               <label for="num" class="form-label">Número(*):</label>
+               <input type="text" class="form-control" id="Número" placeholder="Se não houver,entre com S/N" name="num" required>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+             <label for="bairro" class="form-label">Bairro(*):</label>
+              <input type="text" class="form-control" id="Bairro" placeholder="Entre com o Bairro" name="bairro" required>
+            </div>
+            <div class="col">
+               <label for="city" class="form-label">Cidade(*):</label>
+               <input type="text" class="form-control" id="Cidade" placeholder="Entre com a Cidade" name="city" required>
+           </div>
+        </div>
+        <div class="row">
+            <div class="col">
+              <label for="esta" class="form-label">Estado(*):</label>
+              <input type="text" class="form-control" id="Estado" placeholder="Entre com o Estado" name="esta" required>
+            </div>
+            <div class="col">
+              <label for="cep" class="form-label">CEP(*):</label>
+              <input type="text" class="form-control" id="CEP" placeholder="Apenas números(8 dígitos)" name="cep" required>
+            </div>
+        </div>
+    
+            <div class="row">
+                <div class="col">
+                   <h6>Tipo de cliente(*)</h6>    
 
+         <div class="form-check">
+                     <input type="radio" class="form-check-input" id="radio1" name="optradio" value="option1" checked>Cliente Padrão
+                     <label class="form-check-label" for="clientep"></label>
+        </div>
+        <div class="form-check">
+            <input type="radio" class="form-check-input" id="cliente1" name="optradio" value="option2">Cliente Especial Classe 1
+             <label class="form-check-label" for="radio2"></label>
+        </div>
+      <div class="form-check">
+            <input type="radio" class="form-check-input" id="cliente2" name="optradio" value="option3">Cliente Especial Classe 2
+            <label class="form-check-label"></label>
+      </div>
+             </div>
+ 
+        <div class="col">
+            <h6>***Atenção***</h6>
+            <p>Cliente Padrão(Não especial):O limite do cheque especial é sempre de R$500</p>
+            <p>Cliente Especial Classe1:O limite do cheque especial é de no maxímo R$5.000</p>
+            <p>Cliente Especial Classe2:O limite do cheque especial é de no maxímo R$10.000</p>
+        </div>
+      </div>
+   
+        <label for="uname" class="form-label">Limite(*):</label>
+        <input type="text" class="form-control" id="limite" placeholder="R$ Dígite apenas números e vírgula" name="limite" required>
+</div>
+        <button class="btn btn-primary" type="submit">.....</button>
+    </form>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+        <script>
+            function VerificarNomePreenchido(){
+                var NomeInput=document.getElementsByClassId('Nome');
+                var Nome=NomeInput.value.trim();
+                if(Nome ===''){
+                   alert('por favor, preencha o campo Nome.');
+                   NomeInput.focus();
+                   return false;
+                }
+                return true;
+            }
+        </script>
 </body>
 </html>
