--- a/atv.html
+++ b/atv.html
@@ -2,10 +2,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>atividade ponto</title>
+    <title>atividade ponto/Imitação Site da Proz</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   </head>
-    <!-- Barra de navbar inicio-->
+    
   <body>
    <nav class="navbar navbar-expand-lg" style="background-color: blueviolet;">
         <div class="container-fluid">
@@ -65,7 +65,6 @@
           </div>
         </div>
       </nav>
-    <!--fim navbar-->
 
     <!--imagens slide-->
       <div id="carouselExample" class="carousel slide">
@@ -89,9 +88,8 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-      <!--fim das imagens-->
 
-      <!--inicio das colunas-->
+      <!-- colunas-->
   <div class="text-bg" style="background-color: blueviolet;">
 
       <div class="container text-center " style=" padding: 15 ;width: 100%; background-color: blueviolet;">
@@ -122,7 +120,6 @@
             <p>Temos disponibilidade de acesso, qualquer problema ou duvida e estaremos aqui.</p>
               </div>
     </div> 
-              <!--fim das colunas-->
               
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
@@ -145,7 +142,6 @@
           </li>
         </ul>
       </nav>
-      <!--fim de numero de pagina-->
   </body>
 </html>
   
